[workspace]
members = [
    "kernel",
    "parser",
    "proost",
]

[workspace.dependencies]
atty = "0.2"
bumpalo = "3.11.1"
clap = { version = "4.0.10", features = ["derive"] }
colored = "2"
derive_more = "0.99.17"
im-rc = "15.1.0"
num-bigint = "0.4"
pest = "2.4"
pest_derive = "2.4"
rustyline = "10.0.0"
rustyline-derive = "0.7.0"

[workspace.package]
authors = [
    "Arthur Adjedj",
    "Augustin Albert",
    "Vincent Lafeychine",
    "Lucas Tabary-Maujean"
]
description = "A simple proof assistant written in Rust"
edition = "2021"
license = "GPL-3.0-or-later"
version = "0.1.0"
