[workspace]
members = [
    "kernel",
    "parser",
    "proost",
    "utils"
]

[workspace.dependencies]
clap = { version = "4.0.10", features = ["derive"] }
derive_more = "0.99.17"

[workspace.package]
authors = [
    "Arthur Adjedj",
    "Augustin Albert",
    "Vincent Lafeychine",
    "Lucas Tabary-Maujean"
]
edition = "2021"
version = "0.1.0"
license = "GPL-3.0-or-later"
repository = "https://gitlab.crans.org/loutr/proost"
