[workspace]
members = [
    "kernel",
    "parser",
    "proost",
    "tilleul",
    "elaboration"
]

[workspace.dependencies]
anyhow = "1.0.66"
bumpalo = "3.11.1"
clap = { version = "4.0.10", features = ["derive"] }
derive_more = "0.99.17"

[workspace.package]
authors = [
    "Arthur Adjedj",
    "Augustin Albert",
    "Vincent Lafeychine",
    "Lucas Tabary-Maujean"
]
edition = "2021"
version = "0.2.0"
license = "GPL-3.0-or-later"
repository = "https://gitlab.crans.org/loutr/proost"
