[package]
name = "proost"
description.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
kernel.path = "../kernel"
parser.path = "../parser"

atty.workspace = true
clap.workspace = true
colored.workspace = true
derive_more.workspace = true
path-absolutize.workspace = true
rustyline-derive.workspace = true
rustyline.workspace = true
