[package]
name = "proost"
description = "A simple proof assistant written in Rust"

authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
version.workspace = true
default-run = "proost"

[dependencies]
kernel.path = "../kernel"
parser.path = "../parser"
elaboration.path = "../elaboration"

clap.workspace = true
derive_more.workspace = true

atty = "0.2"
colored = "2"
path-absolutize = "3"
rustyline = "10"
rustyline-derive = "0.7"
