[package]
name = "tilleul"
description = "A LSP server for the simple proof assistant Proost"

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
parser.path = "../parser"
kernel.path = "../kernel"

derive_more.workspace = true

anyhow = "1.0.66"
crossbeam-channel = "0.5.6"
env_logger = "0.9.1"
log = "0.4.17"
lsp-types = "0.93.2"
serde = "1.0.147"
serde_json = "1.0.87"

[dev-dependencies]
mockall = "0.11.2"
