[package]
name = "tilleul"
description = "A LSP server for the simple proof assistant Proost"

edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
parser.path = "../parser"
kernel.path = "../kernel"

derive_more.workspace = true

anyhow = "1"
crossbeam-channel = "0.5"
env_logger = "0.9"
log = "0.4"
lsp-types = "0.93"
serde = "1"
serde_json = "1"

[dev-dependencies]
mockall = "0.11"
